--- a/blog-card-challenge/index.html
+++ b/blog-card-challenge/index.html
@@ -8,20 +8,24 @@
   <title>Frontend Mentor | Blog preview card</title>
 </head>
 <body>
-  <div id="card-container">
-    <img src="./assets/images/illustration-article.svg" id="card-logo" title="Card logo" alt="Card imgae">
-    <h4>Learning</h4>
-    <h5>Published 21 Dec 2023</h5>
-    <h2>HTML & CSS foundations</h2>
-    <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
-    <div id="quotation-container">
-      <img src="./assets/images/image-avatar.webp" id="quotation-icon" title="Greg Hopper" alt="Greg Hopper image">
-      <q>Greg Hooper</q>
+  <main>
+    <div id="card-container">
+      <img src="./assets/images/illustration-article.svg" title="Card logo" alt="Card imgae">
+      <p>Learning</p>
+      <p>Published 21 Dec 2023</p>
+      <h1>HTML & CSS foundations</h1>
+      <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+      <div id="quotation-container">
+        <img src="./assets/images/image-avatar.webp" id="quotation-icon" title="Greg Hopper" alt="Greg Hopper image">
+        <q>Greg Hooper</q>
+      </div>
     </div>
-  </div>
-  <div id="attribution-container">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
-    Coded by <a href="https://www.frontendmentor.io/profile/joshuapoc" target="_blank">Polterncat</a>
-  </div>
-</body>
+  </main>
+  <footer>
+    <div id="attr-container">
+      <p>Challenge by </p><a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+      <p>Coded by </p><a href="https://www.frontendmentor.io/profile/joshuapoc" target="_blank">Polterncat</a>
+    </div>
+  </footer>
+</body> 
 </html>
