--- a/social-links-profile-challenge/index.html
+++ b/social-links-profile-challenge/index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <div class="attr-container">
-            <p class="attr-para">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" class="attr-links" target="_blank">Frontend Mentor</a>.</p>
-            <p class="attr-para">Coded by <a href="https://www.frontendmentor.io/profile/joshuapoc" class="attr-links">Polterncat</a>.</p>
+            <p class="attr-para">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" class="attr-links" target="_blank">Frontend Mentor.</a></p>
+            <p class="attr-para">Coded by <a href="https://www.frontendmentor.io/profile/joshuapoc" class="attr-links">Polterncat.</a></p>
         </div>
     </header>
     <main>
