html tags changed for better semantic. Changed let for const in JS. CSS respective modifications

--- a/social-links-profile-challenge/index.html
+++ b/social-links-profile-challenge/index.html
@@ -20,24 +20,14 @@
             <img src="./assets/images/avatar-jessica.jpeg" title="Jessica Randall" alt="Jessica Randall's Icon">
             <h1>Jessica Randall</h1>
             <Address>London, United Kingdom</Address>
-            <q>Front-end developer and avid reader.</q>
-            <div class="buttons">
-                <button>
-                    Github
-                </button>
-                <button>
-                    Frontend
-                </button>
-                <button>
-                    linkedIn
-                </button>
-                <button>
-                    Twitter
-                </button>
-                <button>
-                    Instagram
-                </button>
-            </div>
+            <p>Front-end developer and avid reader.</p>
+            <ul class="sn-links">
+                <li>Github</li>
+                <li>Frontend</li>
+                <li>linkedIn</li>
+                <li>Twitter</li>
+                <li>Instagram</li>
+            </ul>
         </div>
     </main>
 </body>
