readme modification. HTML modification

--- a/social-links-profile-challenge/index.html
+++ b/social-links-profile-challenge/index.html
@@ -20,7 +20,7 @@
             <img src="./assets/images/avatar-jessica.jpeg" title="Jessica Randall" alt="Jessica Randall's Icon">
             <h1>Jessica Randall</h1>
             <Address>London, United Kingdom</Address>
-            <p>Front-end developer and avid reader.</p>
+            <p>"Front-end developer and avid reader"</p>
             <ul class="sn-links">
                 <li>Github</li>
                 <li>Frontend</li>
